--- a/client/src/screens/GameRoom/components/BoardPoint.css
+++ b/client/src/screens/GameRoom/components/BoardPoint.css
@@ -12,3 +12,11 @@
 .board-point.is-bottom {
   flex-direction: column-reverse;
 }
+
+.board-point.selected {
+  box-shadow: inset 0 0 10px 5px rgba(255, 255, 0, 0.7); /* Желтая подсветка для выбора */
+}
+
+.board-point.highlighted {
+  box-shadow: inset 0 0 10px 5px rgba(0, 255, 0, 0.6); /* Зеленая подсветка для возможного хода */
+}
