--- a/client/src/screens/GameRoom/components/PlayerProfile.css
+++ b/client/src/screens/GameRoom/components/PlayerProfile.css
@@ -7,24 +7,11 @@
 }
 
 .player-profile-gameroom.right {
-  flex-direction: row-reverse;
-}
-
-.profile-avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 2px solid #ffffff;
-  flex-shrink: 0;
-}
-
-.profile-details {
-  display: flex;
-  flex-direction: column;
+  justify-content: flex-end; /* Pushes content to the right */
 }
 
 .player-profile-gameroom.right .profile-details {
-  align-items: flex-end;
+  align-items: flex-end; /* Aligns text to the right */
 }
 
 .profile-name {
