--- a/client/src/screens/GameRoom/GameRoom.css
+++ b/client/src/screens/GameRoom/GameRoom.css
@@ -198,7 +198,11 @@
 }
 
 .bear-off-button {
-  margin-top: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 20; /* Similar to dice-area */
   background-color: rgba(0, 255, 85, 0.1);
   border: 1px solid rgba(0, 255, 85, 0.3);
   color: #00FF55;
