--- a/client/src/screens/GameRoom/GameRoom.css
+++ b/client/src/screens/GameRoom/GameRoom.css
@@ -195,6 +195,7 @@
   font-size: 1.5em;
   font-weight: bold;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  margin-top: 20px; /* Move it slightly lower */
 }
 
 .bear-off-button {
