--- a/client/src/screens/GameRoom/components/Checker.css
+++ b/client/src/screens/GameRoom/components/Checker.css
@@ -1,5 +1,7 @@
 .checker {
   width: 100%; /* Ширина шашки равна ширине ячейки */
   display: block;
+  image-rendering: -webkit-optimize-contrast; /* For Webkit browsers */
+  image-rendering: crisp-edges;
 }
 
