fix: correct pre-splash screen image path and move image to public

--- a/client/src/styles/PreSplashScreen.css
+++ b/client/src/styles/PreSplashScreen.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: #000;
-  background-image: url('../src/assets/load.png');
+  background-image: url('/assets/load.png');
   background-size: cover;
   background-position: center;
   display: flex;
